<resources>
    <string name="app_name">Weather</string>

    first time start up text
    <string name="thanks_for_downloading">Thanks for downloading Simple Weather! Please select how you want Simple Weather to get your location</string>
    <string name="current_location_btn">Use my current location</string>
    <string name="set_a_location">No, I\'ll set my location</string>

    more information text
    <string name="more_information">More information</string>
    <string name="wind">Wind: </string>
    <string name="humidity">Humidity: </string>
    <string name="dewpoint">Dew point: </string>
    <string name="pressure">Pressure: </string>
    <string name="city_and_state">Location: </string>
    <string name="feels_like">Feels like:</string>
    <string name="precipication">Precipitation in last 24 hrs:</string>
    <string name="visibility">Visibility:</string>
    <string name="force_update">Refresh</string>
    <string name="celsius">\u2103</string>
    <string name="fahrenheit">\u2109</string>
    <string name="rate">Rate</string>
    <string name="open_menu">Open menu</string>
    <string name="settings">Settings</string>
    <string name="wind_string">%1$s from the %2$s</string>
    <string name="wind_string_gust">%1$s from the %2$s, gusting to %3$s</string>

    error text
    <string name="no_connection">No internet connection</string>
    <string name="no_data_returned">No weather information returned</string>
    <string name="data_returned_is_unknown">Data returned cannot be interpreted. It could be that the city you entered can\'t be found or the data returned is corrupted</string>
    <string name="turn_on_location">You must turn on your location before Simple Weather can continue</string>
    <string name="needs_permission">Simple Weather needs permission to access location. Your current location is not stored and will only be used once when you first open the app to load the weather.</string>
    <string name="failed_to_get_location">Could not determine location</string>
    <string name="retry">Retry</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="open_location">Turn on location</string>
    <string name="location_not_found">There was an error. It could be that no cities match your search. Or if your internet connection was off and was just turned on, Simple Weather may need a little time to reinitialize before loading the weather</string>
    <string name="location_not_found_btn_text">Set new location</string>
    <string name="update_settings">Update settings</string>
    <string name="no_saved_locations">No saved locations</string>
    <string name="unknown_error">Unknown Error</string>

    settings
    <string name="unit_title">Units</string>
    <string name="dialog_unit_title">Select a Unit</string>
    <string name="unit_pref_key">unit_pref_key</string>

    <string name="unit_auto_value">Automatic</string>
    <string name="unit_imperial_value">Imperial</string>
    <string name="unit_metric_value">Metric</string>

    <string name="unit_auto_label">Automatic</string>
    <string name="unit_imperial_label">Imperial</string>
    <string name="unit_metric_label">Metric</string>

    <string name="location_title">Location</string>
    <string name="dialog_location_title">Select a Location</string>
    <string name="location_pref_key">location_pref_key</string>

    <string name="location_current_location_value">Current Location</string>

    <string name="location_current_location_label">Current Location</string>

    <string name="add_new_location_title">Add new location</string>
    <string name="add_new_location_summary">Please enter a city and state or zip code</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="pref_previously_started" translatable="false">pref_previously_started</string>
    loading info
    <string name="loading_inform_requesting_location">Getting the location of your device</string>
    <string name="loading_inform_fetching_weather_info">Fetching the weather information</string>

    edit locations
    <string name="edit_locations">Edit Locations</string>
    <string name="edit_location">Edit Location</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="updated_successfully">Location updated successfully</string>
    <string name="not_updated_successfully">Location was not updated successfully</string>
    <string name="location_deleted_successfully">Location deleted successfully</string>
    <string name="location_not_deleted">Location was not deleted successfully</string>

</resources>
